<resources>
    <string name="app_name">\@THU</string>
    <string name="title_activity_interactive_menu">InteractiveMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="title_activity_menu_page">menuPage</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user_name">User name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="type_of_user">multiuser</string>
    <string-array name="usertype">
        <item>student</item>
        <item>guest</item>
        <item>admin</item>
    </string-array>
    <string name="coronaNewsExpanded">Participation in the on-site study program is only possible in the winter semester recovered / vaccinated / tested (with proof, max. 72 hours old). In order to follow up chains of infection, the participants must register for each face-to-face event./n
With immediate effect, it is again mandatory to wear a medical mask in all rooms and (learning) areas of the university - also in teaching and if the minimum distance is observed (exception: lecturers)./n
Since November 13th there have been free citizen tests again across Germany. The university cannot operate an additional test center and cannot cover the costs for corona tests./n
You will be contacted by “your” lecturers or by the relevant deans of studies for the specific organization of the individual courses./n
The university buildings are only open to university members and university members; the rectorate can admit other groups of people./n
The Corona protective measures require all of us to understand each other, pragmatic solutions, timely feedback about possible difficulties as well as a large amount of personal responsibility and self-organization./n
Stay healthy!/n
11/23/2021 9:45 AM</string>
    <string name="coronaNewsNotExpanded">Participation in the on-site study program is only possible...</string>
    <string name="serviceRoboticsExpanded">At the first XITO user conference on October 28th and 29th, interested parties could not only find out more about the XITO platform of the THU startup Toolify, but also get an insight into the current state of the art in the field of robotics and automation./n
To this end, Toolify was able to attract numerous speakers who used practical examples to show how and where robots are used, what role platforms play and where XITO - the marketplace for automation through robots - is already being used./n
Dr. Alexander Tettenborn from the Federal Ministry for Economic Affairs and Energy (BMWi) said in his welcoming address that the SeRoNet project and the XITO product are taking service robotics to the next level and strengthening Germany as a business location. Prof. Dr.-Ing. Thomas Bauernhansl, director of the Fraunhofer Institute for Production Engineering and Automation, emphasized in his lecture that Germany must not lose touch and that platforms - which bring companies and people together - have a major influence today./n
The special thing about the user conference, which took place in two separate studios, was that, parallel to the event, an intralogistics solution was set up and presented directly on site. How easy it is to change the existing application with the XITO platform was shown over the course of the second day. This is possible because the XITO platform offers a marketplace with over 110 components (building blocks) from 50 manufacturers, which can be freely selected and combined. A simple implementation of individual problems in the area of ​​automation through robotics, especially for small and medium-sized companies with a small budget, is thus possible in a targeted manner./n
The participants in the user conference were enthusiastic about the practical examples and received a lot of inspiration to be prepared for digitization with the help of XITO./n
About Toolify Robotics/n
The Toolify Robotics GmbH is a young startup company, which has its beginnings in the THU. With the XITO marketplace for automation through robotics, Toolify offers a platform for realizing robotics applications with an open modular system.
The three founders Dr. Dennis Stampfer, Matthias Lutz, M.Sc., and Dr. With the support of THU, Alex Lotz received an EXIST scholarship for their new business idea in 2020. The team has now grown to six people.The Toolify Robotics GmbH is a young startup company, which has its beginnings in the THU. With the XITO marketplace for automation through robotics, Toolify offers a platform for realizing robotics applications with an open modular system.
The three founders Dr. Dennis Stampfer, Matthias Lutz, M.Sc., and Dr. With the support of THU, Alex Lotz received an EXIST scholarship for their new business idea in 2020. The team has now grown to six people./n
03/11/2021 00:00</string>
    <string name="serviceRoboticsNotExpanded">At the first XITO user conference on October 28th and 29th...</string>
    <string name="newCampusExpanded">After almost three years of construction, the Landesbetrieb Vermögen und Bau Baden-Württemberg (VBA) officially handed over the new campus building on Oberen Eselsberg to the THU today. In the presence of prominent guests from politics and society, the keys to the building were handed over by Wilmuth Lindenthal, Head of VBA Office Ulm, to Rector Volker Reuter./n
The EUR 43 million building is used by the Faculty of Electrical Engineering and Information Technology and its two institutes for Automation Systems (IAS) and Communication Technology (IKT) as well as the Institute for Energy and Drive Technology (IEA) of the Faculty of Production Technology, which was previously part of the The branch in need of renovation was housed in Eberhard-Finckh-Straße in Böfingen./n
The building constructed in accordance with the Efficiency House Plus standard emits more energy than it needs to operate. It serves the teaching and research of several institutes and contains laboratories as well as office, meeting and seminar areas. With the Efficiency House Plus standard, the building complies with the requirements of the state of Baden-Württemberg to design its building stock to be climate-neutral by 2050./n
Real laboratory of the energy transition/n
The entire building serves as an energetic real laboratory in which innovations are tested in a real environment and solutions for the conversion of the energy system are developed. As a “real laboratory for the energy transition”, it brings innovative technologies into use with the aim of intelligently optimizing energy flows and researching possibilities for efficiency gains./n
Connected to the previous campus building to form a complex
The new building was erected as a four-story building./n
The open space between the new and old buildings connects the two buildings to form a complex. Laboratory areas, offices and seminar areas are grouped around the two inner courtyards, which provide lighting and ventilation, with a view of Albert-Einstein-Allee and the adjoining natural area. In the basement there are numerous, high-quality furnished rooms: two workshops, a rapid prototyping room, seminar rooms, the Digital Media Innovation Lab, offices, sound studio, print lab, photo and video studio, PV test room / flasher, EMC laboratory, drive technology -Laboratory, building services center ... A spacious foyer area with a multimedia video wall can be used variably for lectures and courses./n
Sustainable energy generation/n
The roof areas of the building are used to generate electricity by means of photovoltaics. The photovoltaic system comprises 1135 modules with a total output of 419 kWp and an annual yield of approx. 420 kWh / a. Of the locally generated electricity, 75 percent is expected to be used in the building itself and 25 percent to be fed into the grid. A heat pump is available to cover the basic load for heating and cooling. The return of the district cooling network serves as the heat source. In summer, excess heat is fed back into the network of FUG - Fernwärme Ulm./n
07/30/2021 13:00</string>
    <string name="newCampusNotExpanded">After almost three years of construction, the Landesbetrieb Vermögen ...</string>
    <string name="StudentIdCardNotExpanded"> Your Student ID card will accompany you from your very first day...</string>
    <string name="uniAccountNotExpanded">The services of the Center for Information Infrastructure and Media...</string>
    <string name="emailNotExpanded">Every Ulm University of Applied Sciences student gets their own university mailbox...</string>
    <string name="wifiNotExpanded">Ulm University of Applied Sciences is a participant in the eduroam project...</string>
    <string name="remoteAppNotExpanded">The Windows applications we offer run on the University of Applied Sciences servers…</string>
    <string name="vpnNotExpanded">If you want to connect to the Ulm University of Applied Sciences...</string>
    <string name="softwareForStudentNotExpanded">As a THU student, you have the chance to use a variety...</string>
    <string name="lsfNotExpanded">The LSF is an online portal for students...</string>
    <string name="selfServiceFunctionsNotExpanded">You can update your personal details...</string>
    <string name="eLearningNotExpanded">e-Learning should provide you with all the opportunities...</string>
</resources>