<?xml version="1.0" encoding="utf-8"?>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesCardActivity">

    <!--bottom navigation bar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bone_white"
        app:itemIconTint="@color/thu_blue"
        app:itemTextColor="@color/thu_blue"
        app:labelVisibilityMode="selected"
        app:menu="@menu/bottom_navigation_bar" />


    <!--toolbar-->
    <LinearLayout
        android:id="@+id/my_services_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/header_bg">

        <!--header-->
        <TextView
            android:id="@+id/homepage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/myfont2"
            android:text="IT services and THU-card"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/my_services_toolbar"
        android:layout_above="@id/bottom_navigation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/StudentIdTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="STUDENT ID CARD"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/studentIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/StudentIdTitle"
                android:layout_marginTop="5dp"
                android:text="@string/StudentIdCardNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/uniAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/studentIdText"
                android:text="UNIVERSITY ACCOUNT"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/uniAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/uniAccountTitle"
                android:layout_marginTop="5dp"
                android:text="@string/uniAccountNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/uniAccountText"
                android:text="E-MAIL"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTitle"
                android:layout_marginTop="5dp"
                android:text="@string/emailNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/wifiTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/emailText"
                android:text="WIFI -EDUROAM"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/wifiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifiTitle"
                android:layout_marginTop="5dp"
                android:text="@string/wifiNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/remoteAppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/wifiText"
                android:text="REMOTE APPS"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/remoteAppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/remoteAppTitle"
                android:layout_marginTop="5dp"
                android:text="@string/remoteAppNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vpnTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/remoteAppText"
                android:text="VPN"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/vpnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vpnTitle"
                android:layout_marginTop="5dp"
                android:text="@string/vpnNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/softwareForStudentsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/vpnText"
                android:text="SOFTWARE FOR STUDENTS"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/softwareForStudentsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/softwareForStudentsTitle"
                android:layout_marginTop="5dp"
                android:text="@string/softwareForStudentNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lsfTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/softwareForStudentsText"
                android:text="LSF"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lsfText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lsfTitle"
                android:layout_marginTop="5dp"
                android:text="@string/lsfNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/selfServiceFunctionsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/lsfText"
                android:text="SELF SERVICE FUNCTIONS"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/selfServiceFunctionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/selfServiceFunctionsTitle"
                android:layout_marginTop="5dp"
                android:text="@string/selfServiceFunctionsNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/eLearningTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/selfServiceFunctionsText"
                android:text="E-LEARNING"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/eLearningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eLearningTitle"
                android:layout_marginTop="5dp"
                android:text="@string/eLearningNotExpanded"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />
  </RelativeLayout>
 </ScrollView>

</RelativeLayout>